--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -235,8 +235,8 @@
 				<span class="progress-time"></span>
 
 				<div class="track-progress-bar">
-					<div class="time-balloon">
-						<div class="time-balloon-time-wrapper shadow-top-small">
+					<div class="time-balloon shadow-top-small">
+						<div class="time-balloon-time-wrapper">
 							<div class="time-balloon-time"></div>
 						</div>
 						<div class="time-balloon-pointer"></div>
