--- a/src/py/music/templates/music/lyrics.html
+++ b/src/py/music/templates/music/lyrics.html
@@ -28,7 +28,7 @@
 
 	<div class="lyrics-super-wrapper">
 		<div class="lyrics-wrapper">
-			<h3>{{ lyrics.title }}</h3>
+			<h3 class="title">{{ lyrics.title }}</h3>
 			{% if lyrics.english_lyrics %}
 				<a class="english-translation-link" href="#english_lyrics">English translation below</a>
 			{% endif %}
@@ -37,7 +37,7 @@
 
 		{% if lyrics.english_lyrics %}
 		<div class="lyrics-wrapper">
-			<h3 id="english_lyrics">{{ lyrics.english_title }}</h3>
+			<h3 id="english_lyrics" class="title">{{ lyrics.english_title }}</h3>
 			<div class="lyrics">{{ lyrics.english_lyrics | markdown_to_html | safe }}</div>
 		</div>
 		{% endif %}
