total CSS refactoring - Home

--- a/src/css/10-pages.css
+++ b/src/css/10-pages.css
@@ -1,3 +1,4 @@
+/*============== Any heading ==============*/
 .content .content-heading {
 	border-bottom-right-radius: 24px;
 	overflow: hidden;
@@ -78,3 +79,8 @@
 }
 
 .content-discography .license-notice {padding: 0 10px;}
+
+
+/*============== Home ==============*/
+.content-home article .news-title {margin-top: 1.5em;}
+.content-home .news a {font-style: italic;}
