total CSS refactoring - tune

--- a/src/css/21-xxs.css
+++ b/src/css/21-xxs.css
@@ -35,4 +35,6 @@ screen and (max-width: 20.1em) and (orientation: landscape) {
 	.content-discography .album-cover {margin-top: 16px;}
 	.content-discography .album-cover .fas {font-size: 150px;}
 	.content-discography .album-tracks .track-length {margin-left: 4px;}
+
+	.content-tune .tune-links li {margin: 5px 0;}
 }
