--- a/src/css/24-m.css
+++ b/src/css/24-m.css
@@ -128,7 +128,7 @@
 	}
 
 
-/*============== Content ==============*/
+/*============== Pages ==============*/
 	.content {
 		margin: auto;
 		max-width: 1033px;
