--- a/src/css/22-xs.css
+++ b/src/css/22-xs.css
@@ -31,7 +31,7 @@ screen and (min-width: 20.1em) and (orientation: landscape) {
 	}
 
 
-	/*============== Pages ==============*/
+/*============== Pages ==============*/
 	.content {
 		/* 100% - header-height - footer - player - self padding */
 		min-height: calc(100vh - 64px - 40px - 48px - 40px);
@@ -42,12 +42,13 @@ screen and (min-width: 20.1em) and (orientation: landscape) {
 
 	.content-discography .album-cover {margin-top: 24px;}
 
+	.content-tune .tune-links li {margin: 10px 3px;}
+
 
 /*============== Playlist ==============*/
 	.menu-playlist {height: calc(70vh - 48px - 50px);} /* 70% - footer - search */
 	.menu-playlist ul {padding: 0 5px;}
 	.menu-playlist .playlist-info, .menu-playlist .playlist-time {padding-left: 5px;}
-
 }
 
 
@@ -55,9 +56,10 @@ screen and (min-width: 20.1em) and (orientation: landscape) {
  * NEGATIVE XS
  **********************************************************************************/
 @media screen and (max-width: 35.5em) {
-	/* Otherwise breadcrumbs wrap arround and become unreadable on very narrow screens */
+/*============== Components ==============*/
 	.breadcrumbs ul {max-width: 96%;}
 	.breadcrumbs li {
+		/* Otherwise breadcrumbs wrap arround and become unreadable on very narrow screens */
 		max-width: 100%;
 		overflow-x: hidden;
 		padding: 1px 0;
@@ -68,4 +70,13 @@ screen and (min-width: 20.1em) and (orientation: landscape) {
 	.menu-playlist-wrapper {bottom: 48px;}
 	.player {height: 48px;}
 	footer {margin-bottom: 48px;}
+
+
+/*============== Pages ==============*/
+	.content-tune .tune-title,
+	.content-tune .tune-release-info,
+	.content-tune .tune-links,
+	.content-tune .tune-original-title {
+		text-align: center;
+	}
 }
