--- a/src/css/23-s.css
+++ b/src/css/23-s.css
@@ -33,6 +33,11 @@
 		margin: 24px 22px 0 0;
 	}
 
+	.content-tune .tune-release-info {margin-bottom: 0;}
+	.content-tune .tune-original-title {margin: 0 6px;}
+	.content-tune .tune-links {margin-top: 8px;}
+
+
 /*==============  Playlist ==============*/
 	.menu-playlist {height: calc(100vh - 40px - 50px - 96px);} /* 100% - footer - search - header */
 	.menu-playlist-wrapper .playlist-search input {
@@ -96,4 +101,6 @@
 		padding-bottom: 10px;
 		padding-top: 10px;
 	}
+
+	.content-tune .tune-links li {margin: 10px 4px;}
 }
