total CSS refactoring - version

--- a/src/css/3-screens/1-xxs.css
+++ b/src/css/3-screens/1-xxs.css
@@ -37,4 +37,10 @@ screen and (max-width: 20.1em) and (orientation: landscape) {
 	.content-discography .album-tracks .track-length {margin-left: 4px;}
 
 	.content-tune .tune-links li {margin: 5px 0;}
+
+	.content-version .ascii-logo {
+		font-size: 0.35rem;
+		margin: 0;
+	}
+	.content-version .version-info-table td {width: 50%;}
 }
