--- a/src/py/main/templates/main/news.html
+++ b/src/py/main/templates/main/news.html
@@ -1,10 +1,11 @@
 {% load markdown_to_html %}
 {% load i18n %}
 
+<h2 class="content-heading news-heading">{% trans "News" %}</h2>
 {% for n in news %}
 	<article class="news">
 		<h3 class="news-title">{{ n.title }}</h3>
-		<h4>{{ n.pub_date }}</h4>
+		<h4 class="news-date"><i>{{ n.pub_date }}</i></h4>
 
 		{{ n.body | markdown_to_html | safe }}
 	</article>
