--- a/src/py/main/templates/main/__root.html
+++ b/src/py/main/templates/main/__root.html
@@ -72,20 +72,29 @@
 
 				<div class="logo-text logo-text-right">Saurus</div>
 
-				<div class="toggle-wrapper toggle-main-menu-wrapper">
-					<button id="main-menu-button" class="header-button" title="{% trans 'Main Menu' %}" aria-label="{% trans 'Main Menu' %}">
-						<i class="fas fa-bars"></i>
+				<div class="toggle-wrapper toggle-theme-wrapper">
+					<button id="theme-menu-button" class="header-button" title="{% trans 'Choose a Color Theme' %}" aria-label="{% trans 'Choose a Color Theme' %}">
+						<i class="icon fas fa-lightbulb"></i>
+						<span class="toggle-label">Theme</span>
 						<i class="fas fa-chevron-down"></i>
 					</button>
 				</div>
 
 				<div class="toggle-wrapper toggle-language-wrapper">
-					<button id="language-menu-button" class="header-button" title="{% trans 'Change Language' %}" aria-label="{% trans 'Change Language' %}">
-						<i class="fas fa-language"></i>
-						<span class="toggle-language-label">Language</span>
+					<button id="language-menu-button" class="header-button" title="{% trans 'Change the Language' %}" aria-label="{% trans 'Change the Language' %}">
+						<i class="icon fas fa-language"></i>
+						<span class="toggle-label">Language</span>
 						<i class="fas fa-chevron-down"></i>
 					</button>
 				</div>
+
+				<div class="toggle-wrapper toggle-main-menu-wrapper">
+					<button id="main-menu-button" class="header-button" title="{% trans 'Main Menu' %}" aria-label="{% trans 'Main Menu' %}">
+						<i class="icon fas fa-bars"></i>
+						<i class="fas fa-chevron-down"></i>
+					</button>
+				</div>
+
 			</div>
 
 			<div class="header-super-wrapper">
