--- a/src/css/3-screens/3-s.css
+++ b/src/css/3-screens/3-s.css
@@ -86,7 +86,8 @@
 		margin-right: auto;
 	}
 
-	.toggle-wrapper > .selected i {border-bottom: 2px solid;}
+	.header-button:not(.selected) .icon {padding-bottom: 2px;}
+	.header-button.selected .icon {border-bottom: 2px solid;}
 
 	.header-button > .fa-chevron-down,
 	.header-button > .fa-chevron-up {
@@ -102,6 +103,9 @@
  * ONLY S
  **********************************************************************************/
 @media screen and (min-width: 35.5em) and (max-width: 47.99em) {
+	.toggle-wrapper .header-button {margin-right: 6px;}
+	.toggle-wrapper:last-child .header-button {margin-right: 12px;}
+
 	.menu li > .menu-item {margin: 0 24px;}
 
 	/* non-playlist item */
