--- a/src/css/3-screens/5-l.css
+++ b/src/css/3-screens/5-l.css
@@ -9,6 +9,7 @@
 	}
 	.header-container {
 		height: 131px;
+		justify-content: flex-end;
 	}
 
 
@@ -18,6 +19,39 @@
 		height: 100px;
 	}
 
+	/* prevent Opera workaround on other browsers */
+	.header-container .logo-text-left {margin-left: calc(1px - 1px);}
+	.header-container .logo-text-right {margin-right: calc(1px - 1px);}
+
+
+/*============== Buttons ==============*/
+	.toggle-wrapper {
+		align-items: flex-end;
+	}
+
+	.toggle-language-wrapper {
+		margin-right: auto; /* workaround for Opera */
+		order: 2;
+	}
+
+	.toggle-main-menu-wrapper {
+		width: 24%; /* workaround for Opera */
+		width: calc(50% - 266px);
+	}
+
+	.toggle-main-menu-wrapper .header-button {display: none;}
+
+	.header-button {
+		border-bottom: 0 none;
+		border-radius: 4px;
+		font-size: 1em;
+		margin: 4px 6px;
+		padding: 6px 8px;
+	}
+	.header-button .toggle-label {
+		display: inline;
+		margin-left: 3px;
+	}
 	.header-button .fa-chevron-up,
 	.header-button .fa-chevron-down {
 		font-size: 0.5em;
@@ -25,9 +59,6 @@
 
 
 /*============== Menus ==============*/
-	#main-menu-button {
-		display: none; /* No main menu button on large screens */
-	}
 
 	.menu-language-choice, .menu-music {
 		min-width: 300px;
@@ -39,24 +70,6 @@
 
 	.header-button .icon, .menu li > .menu-item .icon {
 		margin: 0 4px 0 0;
-	}
-
-
-/*============== Language Menu ==============*/
-	.toggle-language-wrapper {
-		align-items: flex-end;
-	}
-
-	.toggle-language-wrapper > .header-button {
-		border-bottom: 0 none;
-		border-radius: 4px;
-		font-size: 1em;
-		margin: 4px 6px;
-		padding: 6px 8px;
-	}
-
-	.toggle-language-label {
-		display: inline;
 	}
 
 
@@ -105,7 +118,7 @@
 	}
 
 /* expanded menus button spacing */
-	.menu-main > ul > li > .menu-item .icon, .header-container .toggle-language-wrapper .icon {
+	.menu-main > ul > li > .menu-item .icon {
 		margin: 0 4px 0 2px;
 	}
 
