added a fallback icon for the theme button

--- a/src/css/0-base/fa-fallback.css
+++ b/src/css/0-base/fa-fallback.css
@@ -16,3 +16,4 @@
 .fa-compact-disc:before{content: 'Ø';}
 .fa-angle-up:before {content: '↑';}
 .fa-info-circle:before {content: '(i)';}
+.fa-lightbulb:before {content: '\00263c';}
